@@ -21,6 +21,7 @@ Popup windows for zones (Hand, Library, Graveyard, Exile, Flashback) will now re
 Clicking the zone icon under a player's avatar will now hide the zone window if its currently open.
 After the last card is removed from a zone window, that window will now automatically be hidden. An example of this would be casting the last card in the Flashback zone.
 Default size of zone windows has been slightly reduced.
+Prevent horizontal scrollbar appearing in zone windows.
 
 ---------
 New Cards
